--- a/app/src/main/res/layout/activity_edit_mode.xml
+++ b/app/src/main/res/layout/activity_edit_mode.xml
@@ -32,6 +32,7 @@
         app:layout_constraintTop_toBottomOf="@+id/etProject" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewAdapter"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="24dp"
