--- a/app/src/main/res/layout/main_one_layout.xml
+++ b/app/src/main/res/layout/main_one_layout.xml
@@ -10,14 +10,14 @@
         android:id="@+id/checkBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginBottom="8dp"
+        android:checked="true"
         android:scaleX="1.5"
         android:scaleY="1.5"
         android:text=""
-        android:checked="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/miantv"
         app:layout_constraintHorizontal_weight="1"
@@ -29,15 +29,13 @@
         android:id="@+id/miantv"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:text=""
+        android:text="default"
         android:textSize="30dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/checkBox"
-        app:layout_constraintTop_toTopOf="parent" />
-
-
+        app:layout_constraintTop_toTopOf="parent"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
