--- a/app/src/main/res/layout/activity_edit_mode.xml
+++ b/app/src/main/res/layout/activity_edit_mode.xml
@@ -27,6 +27,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:text="保存"
+        android:enabled="false"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etProject" />
 
