ボタン背景色変更中2...

--- a/app/src/main/res/drawable/btn_itemclick.xml
+++ b/app/src/main/res/drawable/btn_itemclick.xml
@@ -3,23 +3,22 @@
     <!-- ボタン非活性時  -->
     <item android:state_enabled="false">
         <shape>
-　           <!--ボタンの背景色を設定-->
+            　           <!--ボタンの背景色を設定-->
             <solid android:color="@color/myWhite" />
             <corners android:radius="15px"/>
         </shape>
     </item>
 
     <!-- ボタン押下時 -->
-<!--    <item android:state_pressed="true" android:drawable="@color/myBtnRed" />-->
+    <!--    <item android:state_pressed="true" android:drawable="@color/myBtnRed" />-->
 
 
     <!-- ボタン通常時 -->
     <item>
         <shape>
-            <solid android:color="@color/myBtnBlue" />
+            <solid android:color="@color/myBtnRed" />
             <!--ボタンの背景色を設定-->
             <corners android:radius="15px"/>
         </shape>
     </item>
-
 </selector>
