--- a/app/src/main/res/layout/activity_edit_mode.xml
+++ b/app/src/main/res/layout/activity_edit_mode.xml
@@ -28,6 +28,8 @@
         android:layout_marginTop="16dp"
         android:enabled="false"
         android:text="保存"
+        android:background="@drawable/background_selector"
+        app:backgroundTint="@null"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etProject" />
 
