--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,11 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    //ボタン背景色の色
+    <color name="myWhite">#DCDCDC</color>
+    <color name="myBtnBlue">#FF6200EE</color>
+    <color name="myBtnBlueFla">#FF6200EE</color>
+    <color name="myBtnRed">#CD5C5C</color>
+
 </resources>
